# ratflow-desktop

./: CMakeLists.txt  Makefile  README  README.md  TODO.md
deb/: config  makedeb.sh  postinst
deb/bionic/: requires
deb/common/: description-pak  postinstall-pak
deb/focal/: requires
deb/jammy/: requires
docker/bionic/: Dockerfile  README
docker/focal/: Dockerfile  README
src/: TODO
system/etc/: sddm.conf
system/etc/lightdm/: lightdm-gtk-greeter.conf
system/etc/systemd/: logind.conf
system/share/app_configs/: gtkrc-2.0
system/share/default/: i3blocks.conf
system/share/default/config.d/: 21-keys-apps  21-keys-session
system/share/scripts/: top
system/usr/share/applications/: xkill.desktop
system/usr/share/icons/Emerald/: icon-theme.cache
system/usr/share/ratflow/app_configs/: 90-backlight.rules  gtk-3.0-settings.ini  gtkrc-2.0  qt5ct.conf
system/usr/share/ratflow/app_configs/ulauncher/: settings.json  shortcuts.json
system/usr/share/ratflow/configs/: autoapp  config  dunstrc  gtk-3.0-settings.ini  i3blocks.conf  terminator-config
system/usr/share/ratflow/configs/ulauncher/: extensions.json  settings.json
system/usr/share/ratflow/default/config.d/: 01-variables  10-workspaces  11-outputs  13-wallpaper  21-keys-apps  30-theme  31-bar  90-exec
system/usr/share/ratflow/images/: TODO
system/usr/share/ratflow/init/: 10_init_desktop  11_init_look
system/usr/share/ratflow/profiles/classic/: autoapp  autoapp.conf  env  py3status.conf
system/usr/share/ratflow/profiles/classic/config.d/: 01-variables  10-workspaces  11-outputs  13-wallpaper  20-keys-apps-core  20-keys-window-jumper  20-keys-wm  21-always-float  21-keys-apps  21-keys-media  21-keys-session  21-new-workspace  30-theme  31-bar  40-assignments  50-floating  90-exec  91-exec_always
system/usr/share/ratflow/profiles/classic/config.d/floating.d/: Gsimplecal.float  Osmo.float  Skype.float  Yad.float  screengrab.float
system/usr/share/ratflow/scripts/: always-float  app_launcher  autoapp  backlight  bandwidth  dmenu_extended_ratflow.py  dmenu_extended_run  i3exit  redshift-adjust  top  trans-xsel  volctl  volume_auto  volume_hw1
system/usr/share/xsessions/: ratflow.desktop
